--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -48,3 +48,8 @@ jobs:
 
             - name: Execute tests
               run: vendor/bin/phpunit
+            
+            - name: Send Coverage
+              continue-on-error: true
+              timeout-minutes: 1
+              run: curl -s https://codecov.io/bash | bash -s -- -t ${{secrets.CODECOV_TOKEN}} -f coverage/clover.xml -n github-actions-codecov-${{ matrix.operating-system }}
