--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
     ],
     "require": {
         "php": "^7.3",
-        "illuminate/support": "8.1.*"
+        "illuminate/support": "8.12.*"
     },
     "require-dev": {
         "orchestra/testbench": "6.7.0",
-        "phpunit/phpunit": "9.5.0"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
@@ -55,7 +55,7 @@
             ]
         },
         "branch-alias": {
-            "dev-master": "0.0.1-dev"
+            "dev-devel": "1.0.0-beta.1"
         }
     }
 }
